[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/UserInterface/PauseMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Main/Game.gd" type="Script" id=2]
[ext_resource path="res://src/Level/Level.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Actors/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/UserInterface/CoinsCounter.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/UserInterface/HealthCounter.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/art/ui/quest.png" type="Texture" id=7]
[ext_resource path="res://src/UserInterface/QuestsMenu.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/Actors/NPCGuy.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/theme/fonts/kenney_mini_square.tres" type="DynamicFontData" id=10]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 10 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.5 )

[sub_resource type="StyleBoxFlat" id=2]

[node name="Game" type="Node"]
pause_mode = 2
script = ExtResource( 2 )

[node name="Level" parent="." instance=ExtResource( 3 )]

[node name="NPCs2" type="Node2D" parent="Level"]

[node name="NPCGuy1" parent="Level/NPCs2" instance=ExtResource( 9 )]
position = Vector2( 461, 281 )

[node name="NPCGuy2" parent="Level/NPCs2" instance=ExtResource( 9 )]
position = Vector2( 81, 25 )

[node name="Player" parent="Level" instance=ExtResource( 4 )]
position = Vector2( 90, 546 )

[node name="InterfaceLayer" type="CanvasLayer" parent="."]

[node name="QuestDisplay" type="Control" parent="InterfaceLayer"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Panel" type="Panel" parent="InterfaceLayer/QuestDisplay"]
margin_left = 179.0
margin_right = 614.0
margin_bottom = 105.0

[node name="Accepted" type="Label" parent="InterfaceLayer/QuestDisplay/Panel"]
margin_left = 64.0
margin_top = 10.0
margin_right = 311.0
margin_bottom = 32.0
rect_scale = Vector2( 1.32, 1.32 )
custom_fonts/font = SubResource( 3 )
text = "QUESt ACCEPTED"
align = 1

[node name="QuestDescription" type="Label" parent="InterfaceLayer/QuestDisplay/Panel"]
margin_left = 16.0
margin_top = 17.0
margin_right = 397.0
margin_bottom = 98.0
rect_scale = Vector2( 1.04719, 1.04719 )
custom_fonts/font = SubResource( 4 )
text = "Here lies the quest description"
align = 1
valign = 1

[node name="QuestMenu" parent="InterfaceLayer" instance=ExtResource( 8 )]

[node name="PauseMenu" parent="InterfaceLayer" instance=ExtResource( 1 )]

[node name="CoinsCounter" parent="InterfaceLayer" instance=ExtResource( 5 )]
margin_right = 105.0
margin_bottom = 50.0
custom_styles/panel = SubResource( 1 )

[node name="HealthCounter" parent="InterfaceLayer" instance=ExtResource( 6 )]
margin_left = 690.0
margin_right = 794.0
custom_styles/panel = SubResource( 2 )

[node name="QuestMenuButton" type="TextureButton" parent="InterfaceLayer"]
margin_left = 12.0
margin_top = 413.0
margin_right = 65.0
margin_bottom = 468.0
texture_normal = ExtResource( 7 )

[connection signal="quest_accepted" from="Level/NPCs2/NPCGuy1" to="." method="_quest_accepted"]
[connection signal="quest_accepted" from="Level/NPCs2/NPCGuy2" to="." method="_quest_accepted"]
[connection signal="you_Died" from="InterfaceLayer/HealthCounter" to="." method="end_Game"]
[connection signal="pressed" from="InterfaceLayer/QuestMenuButton" to="InterfaceLayer/QuestMenu" method="_on_QuestMenuButton_pressed"]
