[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/UserInterface/PauseMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Main/Game.gd" type="Script" id=2]
[ext_resource path="res://src/Level/Level2.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Actors/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/UserInterface/CoinsCounter.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/UserInterface/HealthCounter.tscn" type="PackedScene" id=6]

[node name="Game" type="Node"]
pause_mode = 2
script = ExtResource( 2 )

[node name="Level" parent="." instance=ExtResource( 3 )]

[node name="Player" parent="Level" instance=ExtResource( 4 )]
position = Vector2( 90, 546 )

[node name="InterfaceLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="PauseMenu" parent="InterfaceLayer" instance=ExtResource( 1 )]

[node name="CoinsCounter" parent="InterfaceLayer" instance=ExtResource( 5 )]
margin_right = 105.0
margin_bottom = 50.0

[node name="HealthCounter" parent="InterfaceLayer" instance=ExtResource( 6 )]

[connection signal="you_Win" from="InterfaceLayer/CoinsCounter" to="." method="win_Game"]
[connection signal="you_Died" from="InterfaceLayer/HealthCounter" to="Level/Player" method="_you_Died"]
